--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -22,6 +22,7 @@ spec:
       containers:
         - name: flask-app
           image: flask-app:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           resources:
